fixed fullscreen resstore settings. still pending to fix mini preset...

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ Desktop.ini
 *.sql
 *.sqlite
 
+ofxWindowApp-exampleBasic/.vs/ofxWindowApp-exampleBasic/v15/Solution.VC.db-shm
+ofxWindowApp-exampleBasic/.vs/ofxWindowApp-exampleBasic/v15/Solution.VC.db-wal
