fix. Currently using timed mode.

--- a/Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
+++ b/Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
@@ -8,7 +8,7 @@
             "height": 768,
             "width": 1027
         },
-        "window_mode": "OF_WINDOW"
+        "window_mode": "OF_FULLSCREEN"
     },
     {
         "Extra": {
