--- a/Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
+++ b/Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
@@ -1,14 +1,14 @@
 [
     {
         "position": {
-            "x": 2482.0,
-            "y": 245.0
+            "x": -1919.0,
+            "y": 33.0
         },
         "size": {
-            "height": 768,
-            "width": 1027
+            "height": 1046,
+            "width": 958
         },
-        "window_mode": "OF_FULLSCREEN"
+        "window_mode": "OF_WINDOW"
     },
     {
         "Extra": {
