--- a/.gitignore
+++ b/.gitignore
@@ -561,3 +561,6 @@ Examples/exampleAdvanced/enc_temp_folder/aedd3b55d857551f699f4b14ae52a34/ofxWind
 Examples/exampleAdvanced/bin/data/ofxWindowApp/ofxWindowApp.json
 Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
 Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
+Examples/example/enc_temp_folder/91eee1ea362192dc17ade963dce9a778/ofxWindowApp.h
+Examples/example/enc_temp_folder/326b869f20b7dc1176f5a7fcb1541c/ofxWindowApp.cpp
+Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
