--- a/.gitignore
+++ b/.gitignore
@@ -564,3 +564,6 @@ Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
 Examples/example/enc_temp_folder/91eee1ea362192dc17ade963dce9a778/ofxWindowApp.h
 Examples/example/enc_temp_folder/326b869f20b7dc1176f5a7fcb1541c/ofxWindowApp.cpp
 Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
+Examples/example/config.make
+
+*/config.make
