--- a/.gitignore
+++ b/.gitignore
@@ -550,20 +550,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-example_Basic/config.make
-example_Basic/Makefile
-example_Basic/openFrameworks-Info.plist
-example_Basic/Project.xcconfig
-Examples/exampleAdvanced/bin/data/ofxWindowApp/ofxWindowApp.json
-Examples/exampleAdvanced/enc_temp_folder/aedd3b55d857551f699f4b14ae52a34/ofxWindowApp.h
-Examples/exampleAdvanced/bin/data/ofxWindowApp/ofxWindowApp.json
-Examples/exampleAdvanced/enc_temp_folder/aedd3b55d857551f699f4b14ae52a34/ofxWindowApp.h
-Examples/exampleAdvanced/bin/data/ofxWindowApp/ofxWindowApp.json
-Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
-Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
-Examples/example/enc_temp_folder/91eee1ea362192dc17ade963dce9a778/ofxWindowApp.h
-Examples/example/enc_temp_folder/326b869f20b7dc1176f5a7fcb1541c/ofxWindowApp.cpp
-Examples/example/bin/data/ofxWindowApp/ofxWindowApp.json
-Examples/example/config.make
+
 
 */config.make
+*/enc_temp_folder/*
+ofxWindowApp.json
